optimized build step